@@ -1,18 +1,13 @@
 package services;
 
-import com.amadeus.xml.pnracc_10_1_1a.PNRReply;
-import com.compassites.GDSWrapper.amadeus.ServiceHandler;
-import com.compassites.GDSWrapper.travelport.*;
-import com.compassites.model.*;
-import com.compassites.model.traveller.Traveller;
-import com.compassites.model.traveller.TravellerMasterInfo;
-import com.travelport.schema.air_v26_0.*;
-import com.travelport.schema.common_v26_0.ProviderReservationInfoRef;
-import com.travelport.schema.common_v26_0.TypeCabinClass;
-import com.travelport.schema.universal_v26_0.AirCreateReservationRsp;
-import com.travelport.schema.universal_v26_0.ProviderReservationInfo;
-import com.travelport.schema.universal_v26_0.UniversalRecordRetrieveRsp;
-import com.travelport.service.air_v26_0.AirFaultMessage;
+import java.math.BigDecimal;
+import java.text.ParseException;
+import java.text.SimpleDateFormat;
+import java.util.Calendar;
+import java.util.Date;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
 
 import org.springframework.stereotype.Service;
 
@@ -20,10 +15,33 @@ import play.libs.Json;
 import utils.ErrorMessageHelper;
 import utils.StringUtility;
 
-import java.math.BigDecimal;
-import java.text.ParseException;
-import java.text.SimpleDateFormat;
-import java.util.*;
+import com.compassites.GDSWrapper.travelport.AirRequestClient;
+import com.compassites.GDSWrapper.travelport.AirReservationClient;
+import com.compassites.GDSWrapper.travelport.AirTicketClient;
+import com.compassites.GDSWrapper.travelport.Helper;
+import com.compassites.GDSWrapper.travelport.UniversalRecordClient;
+import com.compassites.model.ErrorMessage;
+import com.compassites.model.IssuanceRequest;
+import com.compassites.model.IssuanceResponse;
+import com.compassites.model.PNRResponse;
+import com.compassites.model.Passenger;
+import com.compassites.model.PassengerTypeCode;
+import com.compassites.model.traveller.Traveller;
+import com.compassites.model.traveller.TravellerMasterInfo;
+import com.travelport.schema.air_v26_0.AirItinerary;
+import com.travelport.schema.air_v26_0.AirPriceRsp;
+import com.travelport.schema.air_v26_0.AirReservation;
+import com.travelport.schema.air_v26_0.AirTicketingRsp;
+import com.travelport.schema.air_v26_0.Coupon;
+import com.travelport.schema.air_v26_0.ETR;
+import com.travelport.schema.air_v26_0.Ticket;
+import com.travelport.schema.common_v26_0.BookingTravelerName;
+import com.travelport.schema.common_v26_0.ProviderReservationInfoRef;
+import com.travelport.schema.common_v26_0.TypeCabinClass;
+import com.travelport.schema.universal_v26_0.AirCreateReservationRsp;
+import com.travelport.schema.universal_v26_0.ProviderReservationInfo;
+import com.travelport.schema.universal_v26_0.UniversalRecordRetrieveRsp;
+import com.travelport.service.air_v26_0.AirFaultMessage;
 
 /*
  *
@@ -96,20 +114,36 @@ public class TravelportBookingServiceImpl implements BookingService {
 		AirTicketClient airTicketClient = new AirTicketClient();
 		AirTicketingRsp airTicketingRsp = airTicketClient
 				.issueTicket(issuanceRequest.getGdsPNR());
-
-		issuanceResponse.setPnrNumber(issuanceRequest.getGdsPNR());
-		List<Traveller> travellerList = new ArrayList<>();
-		for (ETR etr : airTicketingRsp.getETR()) {
-			Traveller traveller = new Traveller();
-			Map<String, String> ticketMap = new HashMap<>();
-			for (Ticket ticket : etr.getTicket()) {
-				ticketMap.put(ticket.getCoupon().get(0).getDepartureTime(),
-						ticket.getTicketNumber());
+		if(airTicketingRsp.getETR().size() > 0) {
+			issuanceResponse.setSuccess(true);
+			issuanceResponse.setPnrNumber(issuanceRequest.getGdsPNR());
+			List<Traveller> travellerList = issuanceRequest.getTravellerList();
+			for (Traveller traveller : travellerList) {
+				List<Ticket> tickets = null;
+				for (ETR etr : airTicketingRsp.getETR()) {
+					BookingTravelerName name = etr.getBookingTraveler()
+							.getBookingTravelerName();
+					if (traveller.getPersonalDetails().getFirstName()
+							.equalsIgnoreCase(name.getFirst())
+							&& traveller.getPersonalDetails().getLastName()
+									.equalsIgnoreCase(name.getLast())) {
+						tickets = etr.getTicket();
+						break;
+					}
+				}
+				Map<String, String> ticketMap = new HashMap<>();
+				for(Ticket ticket : tickets) {
+					for (Coupon coupon : ticket.getCoupon()) {
+						String key = coupon.getOrigin()	+ coupon.getDestination() + traveller.getContactId();
+						ticketMap.put(key, ticket.getTicketNumber());
+					}
+				}
+				traveller.setTicketNumberMap(ticketMap);
 			}
-			traveller.setTicketNumberMap(ticketMap);
+			issuanceResponse.setTravellerList(travellerList);
+		} else {
+			issuanceResponse.setSuccess(false);
 		}
-		issuanceResponse.setTravellerList(travellerList);
-
 		return issuanceResponse;
 	}
 
